# ai-automation-hub

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
src/automation_hub/: __init__.py  api.py  database.py  executor.py  main.py  schemas.py
src/automation_hub/static/: app.js  index.html  styles.css
tests/: test_api.py
