[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-automation-hub"
version = "0.1.0"
description = "Visual control plane for AI Skills, MCP servers and automation workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.111", "pydantic>=2.7", "uvicorn[standard]>=0.29"]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
automation-hub = "automation_hub.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/automation_hub"]
artifacts = ["src/automation_hub/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

